Layout issues adressed and fixed (#200)
* buttons float right

* button rotates and button border deleted

* stepnumber added

* deleted unnecessary impoorts

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,8 @@
 	grid-row-start: 1;
 	grid-row-end: 2;
 	overflow: auto;
+	padding-left: 0px;
+	padding-right: 0px;
 }
 
 .chart-container {
